# nginx-healer

./: .gitignore  testhealth.py
.github/workflows/: deploy.yml  destroy.yml
ansible/: Dockerfile  docker-compose.yml  pyproject.toml  run_uvicorn.py  setup.py  setup.py.bak  webhook.py
ansible/config/: inventory.ini  restart_nginx.yml  test.py
ansible/src/webhook_healer_api/: run_uvicorn.py  webhook.py
deploy/: Jenkinsfile  build.sh  deploy.sh  infrastructure.tf  outputs.tf  reboot.sh  variables.tf
nginx/: Dockerfile  build.sh  default.conf  docker-compose.yml  index.html
prometheus/: docker-compose.yml
prometheus/config/: alert.rules.yml  alertmanager.yml  grafana.ini  prometheus.yml
prometheus/nginx/: default.conf  index.html
scripts/: generate_configs.py  requirements.txt  retrieve_key.py
scripts/jinja/: alertmanager.yml.j2  inventory.ini.j2  prometheus.yml.j2
